<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">InfraApp</string>

    <string name="slide_2_title">Permita a localização</string>
    <string name="slide_2_description">
        Autorize a Localização (GPS) para
        \n
       que você possa adicionar os locais
        \n
        em suas reclamações.
    </string>


    <string name="grant_permissions">Liberar permissões</string>
    <string name="mis_grant_permissions">Liberar permissões</string>
    <string name="please_grant_permissions">
        Para poder prosseguir é importante liberar as permissões de localização!
    </string>


    <string name="slide_3_title">Fotos e vídeos</string>
    <string name="slide_3_description">
        Para um melhor entendimento, forneça
        \n
        também nas reclamações algumas fotos e
        \n
        até mesmo vídeos.
    </string>


    <string name="slide_4_title">Termos e condições de uso</string>
    <string name="slide_4_checkbox_label">Concordo com os termos e condições de uso</string>
    <string name="slide_4_checkbox_error">
        Você precisa concordar com os termos e condições de uso para prosseguir
    </string>
    <string name="slide_4_content">
        Passagem padrão original de Lorem Ipsum, usada desde o século XVI.
        \n\n

        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        \n\n

        Seção 1.10.32 de "de Finibus Bonorum et Malorum", escrita por Cícero em 45 AC
        \n\n

        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae
        vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
        aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
        sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat
        voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit
        laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui
        in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo
        voluptas nulla pariatur?
        \n\n

        Tradução para o inglês por H. Rackha, feita em 1914
        \n\n

        But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was
        born and I will give you a complete account of the system, and expound the actual teachings of
        the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes,
        or avoids pleasure itself, because it is pleasure, but because those who do not know how to
        pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there
        anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because
        occasionally circumstances occur in which toil and pain can procure him some great pleasure. To
        take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain
        some advantage from it? But who has any right to find fault with a man who chooses to enjoy a
        pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant
        pleasure?
        \n\n

        Seção 1.10.33 de "de Finibus Bonorum et Malorum", escrita por Cícero em 45 AC
        \n\n

        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
        deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non
        provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum
        fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta
        nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus,
        omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis
        debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non
        recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus
        maiores alias consequatur aut perferendis doloribus asperiores repellat.
        \n\n

        Tradução para o inglês por H. Rackha, feita em 1914
        \n\n

        On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and
        demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee
        the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their
        duty through weakness of will, which is the same as saying through shrinking from toil and pain.
        These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice
        is untrammelled and when nothing prevents our being able to do what we like best, every pleasure
        is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of
        duty or the obligations of business it will frequently occur that pleasures have to be repudiated
        and annoyances accepted. The wise man therefore always holds in these matters to this principle of
        selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to
        avoid worse pains.
    </string>
    <string name="title_activity_principal">InfraApp</string>

    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Fechar menu</string>

    <string name="action_settings">Configurações</string>


    <!-- Tela de Loguin -->
    <string name="btEnviar">ENTRAR!</string>
    <string name="btLoguin">Login</string>
    <string name="btCadastro">Cadastro</string>
    <string name="tvUsuario">Usuário</string>
    <string name="tvSenha">Senha</string>
    <string name="tvCidade">Cidade</string>
    <string name="tvEstado">Estado</string>
    <string name="slogan">Registre sua reinvindicação!</string>
    <string name="esqueceuSenha">Esqueceu sua senha?</string>
    <string name="manterConectado">Manter conectado</string>
    <string name="criarConta">Crie sua conta</string>
    <string name="btLoginGoogle">Entrar com Google+ </string>
    <string name="btLoginFacebook">Entrar com Facebook </string>
    <string name="title_activity_cadastro">Cadastre-se</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Maps</string>
    <string name="title_activity_index">IndexActivity</string>

    <!-- Activity Insert Descriptions -->
    <string name="titleInsertDescriptions">Inicie!</string>
    <string name="descriptionInsertDescriptions">Insira descrições da reclamação</string>
    <string name="hintDescription">Descrição</string>
    <string name="hintTitle">Título</string>

    <!-- Activity Insert Location -->
    <string name="titleInsertLocation">Quase lá!</string>
    <string name="descriptionInsertLocation">Insira a localização da reclamação</string>
    <string name="hintStreet">Rua</string>
    <string name="hintCity">Cidade</string>
    <string name="hintState">Estado</string>
    <string name="hintNeighborhood">Bairro</string>
    <string name="descriptionImageInsertLocation">Pressione a imagem para obter sua localização. \n *Certifique-se de estar com Conexão e GPS ativados!</string>

    <!-- Activity Insert Image -->
    <string name="titleFinal">Finalize!</string>
    <string name="descriptionInsertImage">Insira uma imagem da reclamação</string>
    <string name="nextStep">Prosseguir</string>

</resources>
