<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="br.com.appinfra.appinfra.views.InsertDescriptionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleInsertDescriptions"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            android:textColor="#FFF"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descriptionInsertDescriptions"
            android:textColor="#FFF"
            android:textSize="12sp"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/insertext" />

        <EditText
            android:layout_marginTop="30dp"
            android:id="@+id/etTitle"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/textUsuario"
            android:singleLine="true"
            android:hint="@string/hintTitle"
            android:textColorHint="@color/textUsuario"
            android:background="@color/colorPrimary"
            android:padding="10dp" />

        <EditText
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@color/textUsuario"
            android:singleLine="true"
            android:hint="@string/hintDescription"
            android:id="@+id/etDescription"
            android:textColorHint="@color/textUsuario"
            android:background="@color/colorPrimary"
            android:padding="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sendDescription"
            android:layout_marginTop="30dp"
            android:text="@string/nextStep"
            android:padding="10dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/btTextEnviar"
            android:layout_gravity="center"/>

    </LinearLayout>
</LinearLayout>
